# aoc_2024

./: .gitignore  Makefile  README.md  generate_day_files.py  pyproject.toml
aoc_2024/05_print_queue/: main.py
aoc_2024/06_guard_gallivant/: main.py
aoc_2024/ceres_search/: main.py
aoc_2024/historian_hysteria/: main.py
aoc_2024/mull_it_over/: main.py
aoc_2024/red_nosed_reports/: main.py
aoc_2024/util/: get_input.py  settings.py
templates/: README.md.jinja  main.py.jinja
